--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
 
-<p>Link to slides
+<p>Link to slides <a href="https://github.com/dfucci/SQATLab/lesson1.html">
 If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>
