Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <a href="http://unioulu-tol.github.io/SQATLab/sessions/session1a.html">Introduction to unit-testing and JUnit</a>
 
 <ul>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/RomanNumbers.txt">Roman numbers exercise</a></li>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/WiiTennis.txt">Wii Tennis exercise</a></li>
 </ul>
 </li>
 </ul>
