Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <h2>
 <a name="announcements" class="anchor" href="#announcements"><span class="octicon octicon-link"></span></a>Announcements</h2>
 
-<p>The slides of the first session are available: </p>
+<h3>
+<a name="the-slides-of-the-first-session-are-available" class="anchor" href="#the-slides-of-the-first-session-are-available"><span class="octicon octicon-link"></span></a>The slides of the first session are available:</h3>
 
 <ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session1.html">Intro to SQAT Lab</a></li>
@@ -42,6 +43,7 @@
 <a href="http://unioulu-tol.github.io/SQATLab/sessions/session1a.html">Introduction to unit-testing and JUnit</a>
 
 <ul>
+<li><a href="https://github.com/UniOULU-TOL/ShoppingCart">ShoppingCart source code</a></li>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/WiiTennis.txt">Wii Tennis exercise</a></li>
 </ul>
 </li>
