Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/WiiTennis.txt">Wii Tennis exercise</a></li>
 </ul>
 </li>
+</ul><h3>
+<a name="the-slides-of-the-second-session-are-available" class="anchor" href="#the-slides-of-the-second-session-are-available"><span class="octicon octicon-link"></span></a>The slides of the second session are available:</h3>
+
+<ul>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2.html">Test-driven Development: a gentle introduction</a></li>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2a.html">Refactoring with examples</a></li>
 </ul>
       </section>
     </div>
