Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,6 +35,25 @@
 <a name="announcements" class="anchor" href="#announcements"><span class="octicon octicon-link"></span></a>Announcements</h2>
 
 <h3>
+<a name="master-student-thesis-available" class="anchor" href="#master-student-thesis-available"><span class="octicon octicon-link"></span></a>Master student thesis available</h3>
+
+<p>Me and Burak are looking for a master student who would like to work and write his/her thesis on the topic of <strong>Data Visualization</strong>.<br>
+The aim of the thesis work should be the development of a prototype application (we can decide which kind of) that presents meaningful visualization of unit-test execution results and low-level events logged by Eclipse.<br>
+The initial requirements for you will be:</p>
+
+<ul>
+<li>Start ASAP (by the end of September)</li>
+<li>Produce a report of your work by the end of October</li>
+<li>Try to submit the result of your work to a software engineering conference
+
+<ul>
+<li>If your results will be published the department will pay your a grant of 2000Euros</li>
+</ul>
+</li>
+</ul><p>I have already a small prototype (written using D3.js that could be a good starting point for you).<br>
+If you are interested please contact me.</p>
+
+<h3>
 <a name="the-slides-of-the-first-session-are-available" class="anchor" href="#the-slides-of-the-first-session-are-available"><span class="octicon octicon-link"></span></a>The slides of the first session are available:</h3>
 
 <ul>
@@ -53,6 +72,7 @@
 <ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2.html">Test-driven Development: a gentle introduction</a></li>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2a.html">Refactoring with examples</a></li>
+<li><a href="https://github.com/UniOULU-TOL/WiiTennis">Source code for the Wii Tennis exercise</a></li>
 </ul>
       </section>
     </div>
