Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ The initial requirements for you will be:</p>
 <li>Try to submit the result of your work to a software engineering conference
 
 <ul>
-<li>If your results will be published the department will pay your a grant of 2000Euros</li>
+<li>The department has a small grant (~2000Euro) available for publishing the thesis results</li>
 </ul>
 </li>
 </ul><p>I have already a small prototype (written using D3.js that could be a good starting point for you).<br>
