--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@ If you are interested please contact me.</p>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2.html">Test-driven Development: a gentle introduction</a></li>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2a.html">Refactoring with examples</a></li>
 <li><a href="https://github.com/UniOULU-TOL/WiiTennis">Source code for the Wii Tennis exercise</a></li>
+</ul><h3>
+<a name="the-slides-for-the-third-session-are-available" class="anchor" href="#the-slides-for-the-third-session-are-available"><span class="octicon octicon-link"></span></a>The slides for the third session are available:</h3>
+
+<ul>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session3.html">SOLID Principles</a></li>
 </ul>
       </section>
     </div>
