--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ If you are interested please contact me.</p>
 
 <ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session3.html">SOLID Principles</a></li>
+<li><a href="https://github.com/UniOULU-TOL/sessions/MRA.html">Mars Rover API exercise</a></li>
 </ul>
       </section>
     </div>
