Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ The initial requirements for you will be:</p>
 </ul><p>I have already a small prototype (written using D3.js that could be a good starting point for you).<br>
 If you are interested please contact me.</p>
 
-<h3>
-<a name="the-slides-of-the-first-session-are-available" class="anchor" href="#the-slides-of-the-first-session-are-available"><span class="octicon octicon-link"></span></a>The slides of the first session are available:</h3>
+<h4>
+<a name="session-1" class="anchor" href="#session-1"><span class="octicon octicon-link"></span></a>Session 1:</h4>
 
 <ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session1.html">Intro to SQAT Lab</a></li>
@@ -66,19 +66,19 @@ If you are interested please contact me.</p>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/WiiTennis.txt">Wii Tennis exercise</a></li>
 </ul>
 </li>
-</ul><h3>
-<a name="the-slides-of-the-second-session-are-available" class="anchor" href="#the-slides-of-the-second-session-are-available"><span class="octicon octicon-link"></span></a>The slides of the second session are available:</h3>
+</ul><h4>
+<a name="session-2" class="anchor" href="#session-2"><span class="octicon octicon-link"></span></a>Session 2:</h4>
 
 <ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2.html">Test-driven Development: a gentle introduction</a></li>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2a.html">Refactoring with examples</a></li>
 <li><a href="https://github.com/UniOULU-TOL/WiiTennis">Source code for the Wii Tennis exercise</a></li>
-</ul><h3>
-<a name="the-slides-for-the-third-session-are-available" class="anchor" href="#the-slides-for-the-third-session-are-available"><span class="octicon octicon-link"></span></a>The slides for the third session are available:</h3>
+</ul><h4>
+<a name="session-3" class="anchor" href="#session-3"><span class="octicon octicon-link"></span></a>Session 3:</h4>
 
 <ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session3.html">SOLID Principles</a></li>
-<li><a href="https://github.com/UniOULU-TOL/sessions/MRA.html">Mars Rover API exercise</a></li>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/MRA.html">Mars Rover API exercise</a></li>
 </ul>
       </section>
     </div>
