Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ If you are interested please contact me.</p>
 <ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session3.html">SOLID Principles</a></li>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/MRA.html">Mars Rover API exercise</a></li>
+<li><a href="https://github.com/UniOULU-TOL/MarsRover">Mars Rover API (partial) source code</a></li>
 </ul>
       </section>
     </div>
