Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@ If you are interested please contact me.</p>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session3.html">SOLID Principles</a></li>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/MRA.html">Mars Rover API exercise</a></li>
 <li><a href="https://github.com/UniOULU-TOL/MarsRover">Mars Rover API (partial) source code</a></li>
+</ul><h4>
+<a name="session-4" class="anchor" href="#session-4"><span class="octicon octicon-link"></span></a>Session 4:</h4>
+
+<ul>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session4.html">Testing with Mocks</a></li>
 </ul>
       </section>
     </div>
