Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ If you are interested please contact me.</p>
 
 <ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session4.html">Testing with Mocks</a></li>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/gildedRose.html">Gilded Rose exercise</a></li>
 </ul>
       </section>
     </div>
