Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -71,21 +71,36 @@ If you are interested please contact me.</p>
 
 <ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2.html">Test-driven Development: a gentle introduction</a></li>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2a.html">Refactoring with examples</a></li>
+<li>
+<a href="http://unioulu-tol.github.io/SQATLab/sessions/session2a.html">Refactoring with examples</a>
+
+<ul>
 <li><a href="https://github.com/UniOULU-TOL/WiiTennis">Source code for the Wii Tennis exercise</a></li>
+</ul>
+</li>
 </ul><h4>
 <a name="session-3" class="anchor" href="#session-3"><span class="octicon octicon-link"></span></a>Session 3:</h4>
 
 <ul>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session3.html">SOLID Principles</a></li>
+<li>
+<a href="http://unioulu-tol.github.io/SQATLab/sessions/session3.html">SOLID Principles</a>
+
+<ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/MRA.html">Mars Rover API exercise</a></li>
 <li><a href="https://github.com/UniOULU-TOL/MarsRover">Mars Rover API (partial) source code</a></li>
+</ul>
+</li>
 </ul><h4>
 <a name="session-4" class="anchor" href="#session-4"><span class="octicon octicon-link"></span></a>Session 4:</h4>
 
 <ul>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session4.html">Testing with Mocks</a></li>
+<li>
+<a href="http://unioulu-tol.github.io/SQATLab/sessions/session4.html">Testing with Mocks</a>
+
+<ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/gildedRose.html">Gilded Rose exercise</a></li>
+</ul>
+</li>
 </ul>
       </section>
     </div>
