--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ If you are interested please contact me.</p>
 <a href="http://unioulu-tol.github.io/SQATLab/sessions/session4.html">Testing with Mocks</a>
 
 <ul>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/gildedRose.html">Gilded Rose exercise</a></li>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/sudoku.html">Sudoku exercise</a></li>
 </ul>
 </li>
 </ul>
