Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
         <h2>
 <a name="announcements" class="anchor" href="#announcements"><span class="octicon octicon-link"></span></a>Announcements</h2>
 
-<h3>
-<a name="master-student-thesis-available" class="anchor" href="#master-student-thesis-available"><span class="octicon octicon-link"></span></a>Master student thesis available</h3>
+<h4>
+<a name="master-thesis" class="anchor" href="#master-thesis"><span class="octicon octicon-link"></span></a>Master thesis</h4>
+
+<h5>
+<a name="tdd-dataviz" class="anchor" href="#tdd-dataviz"><span class="octicon octicon-link"></span></a>TDD DataViz</h5>
 
 <p>Me and Burak are looking for a master student who would like to work and write his/her thesis on the topic of <strong>Data Visualization</strong>.<br>
 The aim of the thesis work should be the development of a prototype application (we can decide which kind of) that presents meaningful visualization of unit-test execution results and low-level events logged by Eclipse.<br>
