Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 <a name="master-thesis" class="anchor" href="#master-thesis"><span class="octicon octicon-link"></span></a>Master thesis</h4>
 
 <h5>
+<a name="hokkari" class="anchor" href="#hokkari"><span class="octicon octicon-link"></span></a>Hokkari</h5>
+
+<p>The guys at hokkari.fi are looking for a master students willing to do their thesis project on their platform.<br>
+The project is about interfacing several ice-hockey related databases.<br>
+The Hokkari guys are very likely to hire capable students later into the company, and they already are looking for two technical-oriented guys to be hired for future development and maintenance of the platform.<br>
+You can contact Raija Halonen (<a href="mailto:Raija.Halonen@oulu.fi">Raija.Halonen@oulu.fi</a>), or directly the Hokkari guys at <a href="mailto:Juha.Kinnunen@hokkari.fi">Juha.Kinnunen@hokkari.fi</a></p>
+
+<h5>
 <a name="tdd-dataviz" class="anchor" href="#tdd-dataviz"><span class="octicon octicon-link"></span></a>TDD DataViz</h5>
 
 <p>Me and Burak are looking for a master student who would like to work and write his/her thesis on the topic of <strong>Data Visualization</strong>.<br>
