Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <a name="announcements" class="anchor" href="#announcements"><span class="octicon octicon-link"></span></a>Announcements</h2>
 
 <h4>
-<a name="master-thesis" class="anchor" href="#master-thesis"><span class="octicon octicon-link"></span></a>Master thesis</h4>
+<a name="master-theses" class="anchor" href="#master-theses"><span class="octicon octicon-link"></span></a>Master theses</h4>
 
 <h5>
 <a name="hokkari" class="anchor" href="#hokkari"><span class="octicon octicon-link"></span></a>Hokkari</h5>
