Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ If you are interested please contact me.</p>
 <a href="http://unioulu-tol.github.io/SQATLab/sessions/session4.html">Testing with Mocks</a>
 
 <ul>
+<li><a href="https://github.com/UniOULU-TOL/StockPortfolio">Stock Portfolio using mock objects</a></li>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/sudoku.html">Sudoku exercise</a></li>
 </ul>
 </li>
