Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@ If you are interested please contact me.</p>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/sudoku.html">Sudoku exercise</a></li>
 </ul>
 </li>
+</ul><h4>
+<a name="session-5" class="anchor" href="#session-5"><span class="octicon octicon-link"></span></a>Session 5:</h4>
+
+<ul>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session5.html">Other *DD</a></li>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session5a.html">Intro to Mutation Testing</a></li>
 </ul>
       </section>
     </div>
