Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -118,7 +118,13 @@ If you are interested please contact me.</p>
 
 <ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session5.html">Other *DD</a></li>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session5a.html">Intro to Mutation Testing</a></li>
+<li>
+<a href="http://unioulu-tol.github.io/SQATLab/sessions/session5a.html">Intro to Mutation Testing</a>
+
+<ul>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/BSKInstructions.html">Instructions</a></li>
+</ul>
+</li>
 </ul>
       </section>
     </div>
