Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
 <a name="announcements" class="anchor" href="#announcements"><span class="octicon octicon-link"></span></a>Announcements</h2>
 
 <h4>
+<a name="musicphone-lab-project" class="anchor" href="#musicphone-lab-project"><span class="octicon octicon-link"></span></a>MusicPhone Lab Project</h4>
+
+<p>The main repository for the project can be found <a href="https://github.com/UniOULU-TOL/MusicPhone">here</a><br>
+The documentation describing the overall architecture is <a href="http://unioulu-tol.github.io/SQATLab/sessions/MusicPhoneDocs.html">here</a>  </p>
+
+<ul>
+<li>The first assignment is <a href="http://unioulu-tol.github.io/SQATLab/sessions/MusicPhone.html">here</a>
+</li>
+<li>The instruction for the second part is <a href="http://unioulu-tol.github.io/SQATLab/sessions/MusicPhoneInstructions2.html">here</a>
+</li>
+</ul>
+
+<h4>
 <a name="master-theses" class="anchor" href="#master-theses"><span class="octicon octicon-link"></span></a>Master theses</h4>
 
 <h5>
@@ -61,7 +74,9 @@ The initial requirements for you will be:</p>
 <li>The department has a small grant (~2000Euro) available for publishing the thesis results</li>
 </ul>
 </li>
-</ul><p>I have already a small prototype (written using D3.js that could be a good starting point for you).<br>
+</ul>
+
+<p>I have already a small prototype (written using D3.js that could be a good starting point for you).<br>
 If you are interested please contact me.</p>
 
 <h4>
@@ -77,7 +92,9 @@ If you are interested please contact me.</p>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/WiiTennis.txt">Wii Tennis exercise</a></li>
 </ul>
 </li>
-</ul><h4>
+</ul>
+
+<h4>
 <a name="session-2" class="anchor" href="#session-2"><span class="octicon octicon-link"></span></a>Session 2:</h4>
 
 <ul>
@@ -89,7 +106,9 @@ If you are interested please contact me.</p>
 <li><a href="https://github.com/UniOULU-TOL/WiiTennis">Source code for the Wii Tennis exercise</a></li>
 </ul>
 </li>
-</ul><h4>
+</ul>
+
+<h4>
 <a name="session-3" class="anchor" href="#session-3"><span class="octicon octicon-link"></span></a>Session 3:</h4>
 
 <ul>
@@ -101,7 +120,9 @@ If you are interested please contact me.</p>
 <li><a href="https://github.com/UniOULU-TOL/MarsRover">Mars Rover API (partial) source code</a></li>
 </ul>
 </li>
-</ul><h4>
+</ul>
+
+<h4>
 <a name="session-4" class="anchor" href="#session-4"><span class="octicon octicon-link"></span></a>Session 4:</h4>
 
 <ul>
@@ -113,7 +134,9 @@ If you are interested please contact me.</p>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/sudoku.html">Sudoku exercise</a></li>
 </ul>
 </li>
-</ul><h4>
+</ul>
+
+<h4>
 <a name="session-5" class="anchor" href="#session-5"><span class="octicon octicon-link"></span></a>Session 5:</h4>
 
 <ul>
