Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
 <h4>
 <a name="musicphone-lab-project" class="anchor" href="#musicphone-lab-project"><span class="octicon octicon-link"></span></a>MusicPhone Lab Project</h4>
 
-<p>The main repository for the project can be found <a href="https://github.com/UniOULU-TOL/MusicPhone">here</a><br>
-The documentation describing the overall architecture is <a href="http://unioulu-tol.github.io/SQATLab/sessions/MusicPhoneDocs.html">here</a>  </p>
-
 <ul>
+<li>The main repository for the project can be found <a href="https://github.com/UniOULU-TOL/MusicPhone">here</a><br>
+</li>
+<li>The documentation describing the overall architecture is <a href="http://unioulu-tol.github.io/SQATLab/sessions/MusicPhoneDocs.html">here</a><br>
+</li>
 <li>The first assignment is <a href="http://unioulu-tol.github.io/SQATLab/sessions/MusicPhone.html">here</a>
 </li>
 </ul>
