Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 </li>
 <li>The first assignment is <a href="http://unioulu-tol.github.io/SQATLab/sessions/MusicPhone.html">here</a>
 </li>
+<li>The second assignment is <a href="http://unioulu-tol.github.io/SQATLab/sessions/MusicPhone2.html">here</a>
+</li>
 </ul>
 
 <hr>
