--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 </li>
 <li>The second assignment is <a href="http://unioulu-tol.github.io/SQATLab/sessions/MusicPhone2.html">here</a>
 </li>
+<li>The third assignment is <a href="http://unioulu-tol.github.io/SQATLab/sessions/MusicPhone3.html">here</a>
+***</li>
 </ul>
-
-<hr>
 
 <h4>
 <a name="master-theses" class="anchor" href="#master-theses"><span class="octicon octicon-link"></span></a>Master theses</h4>
