--- a/index.html
+++ b/index.html
@@ -34,39 +34,15 @@
         <h2>
 <a name="announcements" class="anchor" href="#announcements"><span class="octicon octicon-link"></span></a>Announcements</h2>
 
-<h4>
-<a name="musicphone-lab-project" class="anchor" href="#musicphone-lab-project"><span class="octicon octicon-link"></span></a>MusicPhone Lab Project</h4>
-
-<ul>
-<li>The main repository for the project can be found <a href="https://github.com/UniOULU-TOL/MusicPhone">here</a><br>
-</li>
-<li>The documentation describing the overall architecture is <a href="http://unioulu-tol.github.io/SQATLab/sessions/MusicPhoneDocs.html">here</a><br>
-</li>
-<li>The first assignment is <a href="http://unioulu-tol.github.io/SQATLab/sessions/MusicPhone.html">here</a>
-</li>
-<li>The second assignment is <a href="http://unioulu-tol.github.io/SQATLab/sessions/MusicPhone2.html">here</a>
-</li>
-<li>The third assignment is <a href="http://unioulu-tol.github.io/SQATLab/sessions/MusicPhone3.html">here</a>
-</li>
-</ul>
-
 <hr>
 
 <h4>
 <a name="master-theses" class="anchor" href="#master-theses"><span class="octicon octicon-link"></span></a>Master theses</h4>
 
 <h5>
-<a name="hokkari" class="anchor" href="#hokkari"><span class="octicon octicon-link"></span></a>Hokkari</h5>
-
-<p>The guys at hokkari.fi are looking for a master students willing to do their thesis project on their platform.<br>
-The project is about interfacing several ice-hockey related databases.<br>
-The Hokkari guys are very likely to hire capable students later into the company, and they already are looking for two technical-oriented guys to be hired for future development and maintenance of the platform.<br>
-You can contact Raija Halonen (<a href="mailto:Raija.Halonen@oulu.fi">Raija.Halonen@oulu.fi</a>), or directly the Hokkari guys at <a href="mailto:Juha.Kinnunen@hokkari.fi">Juha.Kinnunen@hokkari.fi</a></p>
-
-<h5>
 <a name="tdd-dataviz" class="anchor" href="#tdd-dataviz"><span class="octicon octicon-link"></span></a>TDD DataViz</h5>
 
-<p>Me and Burak are looking for a master student who would like to work and write his/her thesis on the topic of <strong>Data Visualization</strong>.<br>
+<p>Our research group is looking for a master student who would like to work and write his/her thesis on the topic of <strong>Data Visualization</strong>.<br>
 The aim of the thesis work should be the development of a prototype application (we can decide which kind of) that presents meaningful visualization of unit-test execution results and low-level events logged by Eclipse.<br>
 The initial requirements for you will be:</p>
 
@@ -76,12 +52,12 @@ The initial requirements for you will be:</p>
 <li>Try to submit the result of your work to a software engineering conference
 
 <ul>
-<li>The department has a small grant (~2000Euro) available for publishing the thesis results</li>
+<li>The department has a small grant available for publishing the thesis results</li>
 </ul>
 </li>
 </ul>
 
-<p>I have already a small prototype (written using D3.js that could be a good starting point for you).<br>
+<p>There is already a small prototype (written using D3.js that could be a good starting point for you) developed by Davide Fucci.<br>
 If you are interested please contact me.</p>
 
 <hr>
@@ -95,7 +71,6 @@ If you are interested please contact me.</p>
 <a href="http://unioulu-tol.github.io/SQATLab/sessions/session1a.html">Introduction to unit-testing and JUnit</a>
 
 <ul>
-<li><a href="https://github.com/UniOULU-TOL/ShoppingCart">ShoppingCart source code</a></li>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/WiiTennis.txt">Wii Tennis exercise</a></li>
 </ul>
 </li>
@@ -109,11 +84,7 @@ If you are interested please contact me.</p>
 <li>
 <a href="http://unioulu-tol.github.io/SQATLab/sessions/session2a.html">Refactoring with examples</a>
 
-<ul>
-<li><a href="https://github.com/UniOULU-TOL/WiiTennis">Source code for the Wii Tennis exercise</a></li>
-</ul>
-</li>
-</ul>
+
 
 <h4>
 <a name="session-3" class="anchor" href="#session-3"><span class="octicon octicon-link"></span></a>Session 3:</h4>
@@ -121,13 +92,6 @@ If you are interested please contact me.</p>
 <ul>
 <li>
 <a href="http://unioulu-tol.github.io/SQATLab/sessions/session3.html">SOLID Principles</a>
-
-<ul>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/MRA.html">Mars Rover API exercise</a></li>
-<li><a href="https://github.com/UniOULU-TOL/MarsRover">Mars Rover API (partial) source code</a></li>
-</ul>
-</li>
-</ul>
 
 <h4>
 <a name="session-4" class="anchor" href="#session-4"><span class="octicon octicon-link"></span></a>Session 4:</h4>
