--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@ If you are interested please contact me.</p>
 
 <ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2.html">Test-driven Development: a gentle introduction</a></li>
-<li>
-<a href="http://unioulu-tol.github.io/SQATLab/sessions/session2a.html">Refactoring with examples</a>
-
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2a.html">Refactoring with examples</a></li>
+</ul>
 
 
 <h4>
@@ -91,7 +90,8 @@ If you are interested please contact me.</p>
 
 <ul>
 <li>
-<a href="http://unioulu-tol.github.io/SQATLab/sessions/session3.html">SOLID Principles</a>
+<a href="http://unioulu-tol.github.io/SQATLab/sessions/session3.html">SOLID Principles</a></li>
+</ul>
 
 <h4>
 <a name="session-4" class="anchor" href="#session-4"><span class="octicon octicon-link"></span></a>Session 4:</h4>
