--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h2>
-<a name="announcements" class="anchor" href="#announcements"><span class="octicon octicon-link"></span></a>Announcements</h2>
+<a id="announcements" class="anchor" href="#announcements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Announcements</h2>
 
 <hr>
 
 <h4>
-<a name="master-theses" class="anchor" href="#master-theses"><span class="octicon octicon-link"></span></a>Master theses</h4>
+<a id="master-theses" class="anchor" href="#master-theses" aria-hidden="true"><span class="octicon octicon-link"></span></a>Master theses</h4>
 
 <h5>
-<a name="tdd-dataviz" class="anchor" href="#tdd-dataviz"><span class="octicon octicon-link"></span></a>TDD DataViz</h5>
+<a id="tdd-dataviz" class="anchor" href="#tdd-dataviz" aria-hidden="true"><span class="octicon octicon-link"></span></a>TDD DataViz</h5>
 
-<p>Our research group is looking for a master student who would like to work and write his/her thesis on the topic of <strong>Data Visualization</strong>.<br>
+<p>Me and Burak are looking for a master student who would like to work and write his/her thesis on the topic of <strong>Data Visualization</strong>.<br>
 The aim of the thesis work should be the development of a prototype application (we can decide which kind of) that presents meaningful visualization of unit-test execution results and low-level events logged by Eclipse.<br>
 The initial requirements for you will be:</p>
 
@@ -52,18 +52,18 @@ The initial requirements for you will be:</p>
 <li>Try to submit the result of your work to a software engineering conference
 
 <ul>
-<li>The department has a small grant available for publishing the thesis results</li>
+<li>The department has a small grant (~2000Euro) available for publishing the thesis results</li>
 </ul>
 </li>
 </ul>
 
-<p>There is already a small prototype (written using D3.js that could be a good starting point for you) developed by Davide Fucci.<br>
+<p>I have already a small prototype (written using D3.js that could be a good starting point for you).<br>
 If you are interested please contact me.</p>
 
 <hr>
 
 <h4>
-<a name="session-1" class="anchor" href="#session-1"><span class="octicon octicon-link"></span></a>Session 1:</h4>
+<a id="session-1" class="anchor" href="#session-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Session 1:</h4>
 
 <ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session1.html">Intro to SQAT Lab</a></li>
@@ -77,24 +77,29 @@ If you are interested please contact me.</p>
 </ul>
 
 <h4>
-<a name="session-2" class="anchor" href="#session-2"><span class="octicon octicon-link"></span></a>Session 2:</h4>
+<a id="session-2" class="anchor" href="#session-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Session 2:</h4>
 
 <ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2.html">Test-driven Development: a gentle introduction</a></li>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2a.html">Refactoring with examples</a></li>
 </ul>
 
-
 <h4>
-<a name="session-3" class="anchor" href="#session-3"><span class="octicon octicon-link"></span></a>Session 3:</h4>
+<a id="session-3" class="anchor" href="#session-3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Session 3:</h4>
 
 <ul>
 <li>
-<a href="http://unioulu-tol.github.io/SQATLab/sessions/session3.html">SOLID Principles</a></li>
+<a href="http://unioulu-tol.github.io/SQATLab/sessions/session3.html">SOLID Principles</a>
+
+<ul>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/MRA.html">Mars Rover API exercise</a></li>
+<li><a href="https://github.com/UniOULU-TOL/MarsRover">Mars Rover API (partial) source code</a></li>
+</ul>
+</li>
 </ul>
 
 <h4>
-<a name="session-4" class="anchor" href="#session-4"><span class="octicon octicon-link"></span></a>Session 4:</h4>
+<a id="session-4" class="anchor" href="#session-4" aria-hidden="true"><span class="octicon octicon-link"></span></a>Session 4:</h4>
 
 <ul>
 <li>
@@ -108,17 +113,11 @@ If you are interested please contact me.</p>
 </ul>
 
 <h4>
-<a name="session-5" class="anchor" href="#session-5"><span class="octicon octicon-link"></span></a>Session 5:</h4>
+<a id="session-5" class="anchor" href="#session-5" aria-hidden="true"><span class="octicon octicon-link"></span></a>Session 5:</h4>
 
 <ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session5.html">Other *DD</a></li>
-<li>
-<a href="http://unioulu-tol.github.io/SQATLab/sessions/session5a.html">Intro to Mutation Testing</a>
-
-<ul>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/BSKInstructions.html">Instructions</a></li>
-</ul>
-</li>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session5a.html">Intro to Mutation Testing</a></li>
 </ul>
       </section>
     </div>
@@ -127,7 +126,7 @@ If you are interested please contact me.</p>
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">SQAT Lab maintained by <a href="https://github.com/UniOULU-TOL">UniOULU-TOL</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
