--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <h5>
 <a id="tdd-dataviz" class="anchor" href="#tdd-dataviz" aria-hidden="true"><span class="octicon octicon-link"></span></a>TDD DataViz</h5>
 
-<p>Me and Burak are looking for a master student who would like to work and write his/her thesis on the topic of <strong>Data Visualization</strong>.<br>
+<p>Our research groups is looking for a master student who would like to work and write his/her thesis on the topic of <strong>Data Visualization</strong>.<br>
 The aim of the thesis work should be the development of a prototype application (we can decide which kind of) that presents meaningful visualization of unit-test execution results and low-level events logged by Eclipse.<br>
 The initial requirements for you will be:</p>
 
@@ -52,7 +52,7 @@ The initial requirements for you will be:</p>
 </li>
 </ul>
 
-<p>I have already a small prototype (written using D3.js that could be a good starting point for you).<br>
+<p>Davide Fucci has already a small prototype (written using D3.js that could be a good starting point for you).<br>
 If you are interested please contact me.</p>
 
 <hr>
@@ -86,10 +86,6 @@ If you are interested please contact me.</p>
 <li>
 <a href="http://unioulu-tol.github.io/SQATLab/sessions/session3.html">SOLID Principles</a>
 
-<ul>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/MRA.html">Mars Rover API exercise</a></li>
-<li><a href="https://github.com/UniOULU-TOL/MarsRover">Mars Rover API (partial) source code</a></li>
-</ul>
 </li>
 </ul>
 
