Added Gilded Rose links

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@ If you are interested please contact me.</p>
 </li>
 
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2a.html">Refactoring with examples</a></li>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/GildedRose.pdf">Gilded Rose Kata</a></li>
+<li><a href="https://github.com/UniOULU-TOL/GildedRose">Gilded Rose Repository</a></li>
+
 </ul>
 
 <h4>
