Added sudoku repository

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 <hr>
 
 <h4>
+<a id="pre-questionnaire" class="anchor" href="#pre-questionnaire" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course Questionnaire</h4>
+
+Please fill-in the <a id="master-theses" href="https://docs.google.com/forms/d/1WXrORiNlJsqa6IzZqPn_7-pkuGorbKBaiiHLHkiX2iA/viewform">course questionnaire</a>.</h4>
+
+<h4>
 <a id="master-theses" class="anchor" href="#master-theses" aria-hidden="true"><span class="octicon octicon-link"></span></a>Master theses</h4>
 
 <h5>
@@ -102,7 +107,9 @@ If you are interested please contact me.</p>
 
 <ul>
 <li><a href="https://github.com/UniOULU-TOL/StockPortfolio">Stock Portfolio using mock objects</a></li>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/sudoku.html">Sudoku exercise</a></li>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/sudoku.html">Sudoku exercise description</a></li>
+<li><a href="https://github.com/SQATLab2015/">Sudoku exercise project repository</a></li>
+
 </ul>
 </li>
 </ul>
