Added link to eclipse with besouro

--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@ If you are interested please contact me.</p>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/sudoku.html">Sudoku exercise description</a></li>
 <li><a href="https://github.com/SQATLab2015/">Sudoku exercise project repository</a></li>
 
+<li><a href="https://dl.dropboxusercontent.com/u/3527393/eclipse-jee-mars.zip">Eclipse distribution with besouro plugin</a></li>
+
+
 </ul>
 </li>
 </ul>
