--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ If you are interested please contact me.</p>
 <ul>
 <li><a href="https://github.com/UniOULU-TOL/StockPortfolio">Stock Portfolio using mock objects</a></li>
 
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/Exercise.html">instructions for the exercise</a></li>
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/Exercise.html">Instructions for the exercise</a></li>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/sudoku.html">Sudoku exercise description</a></li>
 <li><a href="https://github.com/SQATLab2015/">Sudoku exercise project repository</a></li>
 
