Session 4 and 5 modified

--- a/index.html
+++ b/index.html
@@ -102,17 +102,14 @@ If you are interested please contact me.</p>
 <a id="session-4" class="anchor" href="#session-4" aria-hidden="true"><span class="octicon octicon-link"></span></a>Session 4:</h4>
 
 <ul>
+
+<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/ExerciseSudoku.html"> Instructions for the exercise (Sudoku) </a></li>
+
 <li>
-
-<a href="http://unioulu-tol.github.io/SQATLab/sessions/session4.html">Testing with Mocks</a>
+<a href="http://unioulu-tol.github.io/SQATLab/sessions/session4.html">Testing with Mocks (Will be covered in Session 5)</a>
 <ul>
-<li><a href="https://github.com/UniOULU-TOL/StockPortfolio">Stock Portfolio using mock objects</a></li>
+<li><a href="https://github.com/sqatlab2015/StockPortfolio" target="blank">Stock Portfolio using mock objects</a></li>
 </ul>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/Exercise.html">Instructions for the exercise</a></li>
-
-<li><a href="https://dl.dropboxusercontent.com/u/3527393/eclipse-jee-mars.zip">Eclipse distribution with besouro plugin</a></li>
-
-
 </li>
 </ul>
 
@@ -122,6 +119,7 @@ If you are interested please contact me.</p>
 <ul>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session5.html">Other *DD</a></li>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session5a.html">Intro to Mutation Testing</a></li>
+<li><a href="./sessions/ExerciseGameOfLife.html"> Instructions for the exercise (GameOfLife) </a></li>
 </ul>
       </section>
     </div>
