--- a/index.html
+++ b/index.html
@@ -121,8 +121,33 @@ If you are interested please contact me.</p>
 <li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session5a.html">Intro to Mutation Testing</a></li>
 <li><a href="./sessions/ExerciseGameOfLife.html"> Instructions for the exercise (GameOfLife) </a></li>
 </ul>
-      </section>
-    </div>
+
+<h4>
+<a id="session-6" class="anchor" href="#session-6" aria-hidden="true"><span class="octicon octicon-link"></span></a>Session 6:</h4>
+
+<ul>
+<li> Project 1:  </li>
+<ul>
+<li> Project will be implemented during lab sessions </li>
+<li> If you don't have a github account yet, create one at <a href="http://www.github.com" target="blank">Github.com</a> before the lab session.</li>
+<li> Fill-in <a href="https://docs.google.com/forms/d/1WXrORiNlJsqa6IzZqPn_7-pkuGorbKBaiiHLHkiX2iA/viewform" target="blank"> the course questionnaire</a>  if you have not completed it yet.</li>
+</ul>
+</ul>
+
+<h4>
+<a id="session-7" class="anchor" href="#session-7" aria-hidden="true"><span class="octicon octicon-link"></span></a>Session 7:</h4>
+
+<ul>
+<li> Project 2:  </li>
+<ul>
+<li> Project will be implemented during lab sessions </li>
+<li> If you don't have a github account yet, create one at <a href="www.github.com" target="blank">Github.com</a> before the lab session.</li>
+</ul>
+</ul>
+
+</section>
+</div>
+
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
