--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@ If you are interested please contact me.</p>
 <a id="session-1" class="anchor" href="#session-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Session 1:</h4>
 
 <ul>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session1.html">Intro to SQAT Lab</a></li>
+<li><a href="http://M3SOulu.github.io/SQATLab/sessions/session1.html">Intro to SQAT Lab</a></li>
 <li>
-<a href="http://unioulu-tol.github.io/SQATLab/sessions/session1a.html">Introduction to unit-testing and JUnit</a>
+<a href="http://M3SOulu.github.io/SQATLab/sessions/session1a.html">Introduction to unit-testing and JUnit</a>
 
 <ul>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/WiiTennis.txt">Wii Tennis exercise</a></li>
+<li><a href="http://M3SOulu.github.io/SQATLab/sessions/WiiTennis.txt">Wii Tennis exercise</a></li>
 </ul>
 </li>
 </ul>
@@ -80,7 +80,7 @@ If you are interested please contact me.</p>
 <a id="session-2" class="anchor" href="#session-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Session 2:</h4>
 
 <ul>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2.html">Test-driven Development: a gentle introduction</a></li>
+<li><a href="http://M3SOulu.github.io/SQATLab/sessions/session2.html">Test-driven Development: a gentle introduction</a></li>
 
 </ul>
 
@@ -89,12 +89,12 @@ If you are interested please contact me.</p>
 
 <ul>
 <li>
-<a href="http://unioulu-tol.github.io/SQATLab/sessions/session3.html">SOLID Principles</a>
+<a href="http://M3SOulu.github.io/SQATLab/sessions/session3.html">SOLID Principles</a>
 </li>
 
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session2a.html">Refactoring with examples</a></li>
+<li><a href="http://M3SOulu.github.io/SQATLab/sessions/session2a.html">Refactoring with examples</a></li>
 <li><a href="./sessions/GildedRose.pdf">Gilded Rose Kata</a></li>
-<li><a href="https://github.com/UniOULU-TOL/GildedRose">Gilded Rose Repository</a></li>
+<li><a href="https://github.com/M3SOulu/GildedRose">Gilded Rose Repository</a></li>
 
 </ul>
 
@@ -103,10 +103,10 @@ If you are interested please contact me.</p>
 
 <ul>
 
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/ExerciseSudoku.html"> Instructions for the exercise (Sudoku) </a></li>
+<li><a href="http://M3SOulu.github.io/SQATLab/sessions/ExerciseSudoku.html"> Instructions for the exercise (Sudoku) </a></li>
 
 <li>
-<a href="http://unioulu-tol.github.io/SQATLab/sessions/session4.html">Testing with Mocks (Will be covered in Session 5)</a>
+<a href="http://M3SOulu.github.io/SQATLab/sessions/session4.html">Testing with Mocks (Will be covered in Session 5)</a>
 <ul>
 <li><a href="https://github.com/sqatlab2015/StockPortfolio" target="blank">Stock Portfolio using mock objects</a></li>
 </ul>
@@ -117,8 +117,8 @@ If you are interested please contact me.</p>
 <a id="session-5" class="anchor" href="#session-5" aria-hidden="true"><span class="octicon octicon-link"></span></a>Session 5:</h4>
 
 <ul>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session5.html">Other *DD</a></li>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session5a.html">Intro to Mutation Testing</a></li>
+<li><a href="http://M3SOulu.github.io/SQATLab/sessions/session5.html">Other *DD</a></li>
+<li><a href="http://M3SOulu.github.io/SQATLab/sessions/session5a.html">Intro to Mutation Testing</a></li>
 <li><a href="./sessions/ExerciseGameOfLife.html"> Instructions for the exercise (GameOfLife) </a></li>
 </ul>
 
