--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <a id="session-1" class="anchor" href="#session-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Week 35:</h4>
 
 <ul>
-<li><a href="http://unioulu-tol.github.io/SQATLab/sessions/session1.html">Intro to SQAT Lab</a></li>
+<li><a href="./sessions/session1.html">Intro to SQAT Lab</a></li>
 </ul>
 
 <h4>
