--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 
 <ul>
 <li><a href="./sessions/session1.html">Intro to SQAT Lab</a></li>
+<li>Programming Assignment</li>
+<ul>
+<li><a href="./sessions/assignment1.html">Instructions</a></li>
+<li><a href="./sessions/WiiTennis.txt">Task description</a></li>
+</ul>
+<li>Fill in the <a href="https://docs.google.com/forms/d/e/1FAIpQLSdCVibif4vpVWc6mcjo06kyUXeuzQR00k16yFFBX3T6WuT6qw/viewform?usp=send_form" target="blank">questionnaire</a></li>
 </ul>
 
 <h4>
