--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
 <a id="session-2" class="anchor" href="#session-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Week 36:</h4>
 
 <ul>
-<li>TBA</li>
+<li>Unit Testing Assignment</li>
+<ul>
+<li><a href="./sessions/week2_assignment1-2.pdf">Instructions</a></li>
+<li><a href="./sessions/WiiTennis.txt">Teenis Game task description</a></li>
+<li><a href="./sessions/GildedRose_rules.pdf">Gilded rose task description</a></li>
+</ul>
+<li>Programming Assignment</li>
 </ul>
 
 <h4>
