--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 <ul>
 <li>Unit Testing Assignment</li>
 <ul>
-<li><a href="./sessions/week2_assignment1-2.pdf">Instructions</a></li>
+<li><a href="./week2_assignment1-2.pdf">Instructions</a></li>
 <li><a href="./sessions/WiiTennis.txt">Teenis Game task description</a></li>
-<li><a href="./sessions/GildedRose_rules.pdf">Gilded rose task description</a></li>
+<li><a href="./GildedRose_rules.pdf">Gilded rose task description</a></li>
 </ul>
 <li>Programming Assignment</li>
 </ul>
