--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 <li><a href="./GildedRose_rules.pdf">Gilded rose task description</a></li>
 </ul>
 <li>Programming Assignment</li>
+<ul>
+<li><a href="./sudoku.pdf">Sudoku Verifier task description</a></li>
+<li><a href="https://github.com/M3SOulu/SQAT_SudokuVerifier">Project Repository on Giuthub</a></li>
+</ul>
 </ul>
 
 <h4>
