--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 <ul>
 <li>Unit Testing Assignment</li>
 <ul>
-<li><a href="./week2_assignment1-2.pdf">Instructions</a></li>
-<li><a href="./sessions/WiiTennis.txt">Teenis Game task description</a></li>
-<li><a href="./GildedRose_rules.pdf">Gilded rose task description</a></li>
+<li><a href="./week2_assignment1-2.pdf" target="blank">Instructions</a></li>
+<li><a href="./sessions/WiiTennis.txt" target="blank">Teenis Game task description</a></li>
+<li><a href="./GildedRose_rules.pdf" target="blank">Gilded rose task description</a></li>
 </ul>
 <li>Programming Assignment</li>
 <ul>
-<li><a href="./sudoku.pdf">Sudoku Verifier task description</a></li>
-<li><a href="https://github.com/M3SOulu/SQAT_SudokuVerifier">Project Repository on Giuthub</a></li>
+<li><a href="./sudoku.pdf" target="blank">Sudoku Verifier task description</a></li>
+<li><a href="https://github.com/M3SOulu/SQAT_SudokuVerifier" target="blank">Project Repository on Giuthub</a></li>
 </ul>
 </ul>
 
