--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 <li>Unit Testing Assignment</li>
 <ul>
 <li><a href="./week2_assignment1-2.pdf" target="blank">Instructions</a></li>
-<li><a href="./sessions/WiiTennis.txt" target="blank">Teenis Game task description</a></li>
+<li><a href="./sessions/WiiTennis.txt" target="blank">Tenis Game task description</a></li>
 <li><a href="./GildedRose_rules.pdf" target="blank">Gilded rose task description</a></li>
 </ul>
 <li>Programming Assignment</li>
 <ul>
 <li><a href="./sudoku.pdf" target="blank">Sudoku Verifier task description</a></li>
-<li><a href="https://github.com/M3SOulu/SQAT_SudokuVerifier" target="blank">Project Repository on Giuthub</a></li>
+<li><a href="https://github.com/M3SOulu/SQAT_SudokuVerifier" target="blank">Project Repository on Github</a></li>
 </ul>
 </ul>
 
