programming assignment 2 added

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 </ul>
 <li>Programming Assignment</li>
 <ul>
+  
+<li><a href="./progAssignment2.pdf" target="blank">Instructions</a></li>
 <li><a href="./sudoku.pdf" target="blank">Sudoku Verifier task description</a></li>
 <li><a href="https://github.com/M3SOulu/SQAT_SudokuVerifier" target="blank">Project Repository on Github</a></li>
 </ul>
