--- a/index.html
+++ b/index.html
@@ -35,20 +35,41 @@
 <a id="session-1" class="anchor" href="#session-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Week 35:</h4>
 
 <ul>
-<li><a href="./sessions/session1.html">Intro to SQAT Lab</a></li>
+<li><a href="./sessions/session1.html" target="blank">Intro to SQAT Lab</a></li>
 <li>Programming Assignment</li>
 <ul>
-<li><a href="./sessions/assignment1.html">Instructions</a></li>
-<li><a href="./sessions/WiiTennis.txt">Task description</a></li>
+<li><a href="./sessions/assignment1.html" target="blank">Instructions</a></li>
+<li><a href="./tasks/WiiTennis.txt" target="blank">Task description</a></li>
 </ul>
 <li>Fill in the <a href="https://docs.google.com/forms/d/e/1FAIpQLSdCVibif4vpVWc6mcjo06kyUXeuzQR00k16yFFBX3T6WuT6qw/viewform?usp=send_form" target="blank">questionnaire</a></li>
 </ul>
 
 <h4>
 <a id="session-2" class="anchor" href="#session-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Week 36:</h4>
-
 <ul>
+<li>Unit Testing Assignment</li>
+<ul>
+<li> <a href="./tasks/S2_UTAssignment.pdf" target="blank">Instructions</a></li>
+<li>Assignment 1: Tennis Game unit testing</li>
+<ul>
+<li><a href="./tasks/WiiTennis.txt" target="blank">Tennis Game task description</a></li>
+<li> <a href="https://github.com/SQATLab2016/TennisGame_Testing" target="blank">Project repository</a> </li>
+</ul>
+<li>Assignment 2: Gilded Rose unit testing</li>
+<ul>
+<li> <a href="./tasks/GildedRose_rules.pdf" target="blank">Gilded rose task description</a></li>
+<li> Project repository on Github: <a href="https://github.com/SQATLab2016/GildedRose" target="blank">GildedRose_Testing </a> </li>
+</ul>
 
+</ul>
+<li>Programming Assignment: Sudoku Verifier</li>
+<ul>
+<!--
+<li> <a href="./tasks/S2_ProgrammingAssignment.pdf" target="blank"> Instructions</a></li>
+<li> <a href="./tasks/sudoku.pdf" target="blank">Sudoku Verifier task description</a></li>
+<li> Project repository on Github: <a href="https://github.com/SQATLab2016/SudokuVerifier" target="blank">SudokuVerifier </a> </li>
+</ul>
+-->
 </ul>
 
 <h4>
