--- a/index.html
+++ b/index.html
@@ -62,13 +62,7 @@
 </ul>
 
 </ul>
-<li>Programming Assignment: Sudoku Verifier</li>
-<ul>
 
-<li> <a href="./tasks/S2_ProgrammingAssignment.pdf" target="blank"> Instructions</a></li>
-<li> <a href="./tasks/sudoku.pdf" target="blank">Sudoku Verifier task description</a></li>
-<li> Project repository on Github: <a href="https://github.com/SQATLab2016/SudokuVerifier" target="blank">SudokuVerifier </a> </li>
-</ul>
 
 </ul>
 
@@ -76,7 +70,14 @@
 <a id="session-3" class="anchor" href="#session-3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Week 37:</h4>
 
 <ul>
-<li> TBA </li>
+<li> Iterative Test-last Development </li>
+<li>Programming Assignment: Sudoku Verifier</li>
+<ul>
+
+<li> <a href="./tasks/S2_ProgrammingAssignment.pdf" target="blank"> Instructions</a></li>
+<li> <a href="./tasks/sudoku.pdf" target="blank">Sudoku Verifier task description</a></li>
+<li> Project repository on Github: <a href="https://github.com/SQATLab2016/SudokuVerifier" target="blank">SudokuVerifier </a> </li>
+</ul>
 </ul>
 
 <h4>
