--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
 <a id="session-3" class="anchor" href="#session-3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Week 37:</h4>
 
 <ul>
-<li> Iterative Test-last Development </li>
+<li> Iterative Test-last Development (Slides available on Optima)</li>
+<li> <a href="./sessions/session2a.html" target="blank">Refactoring with Examples</a></li>
+<li> Eclipse with Besouro Plugin</li>
+<ul>
+<li> Download <a href="http://www.ee.oulu.fi/~ekarac/eclipse-besouro.zip" target="blank">Eclipse with Besouro Plugin</a></li>
+<li> Extract the zip file on your Desktop. (No installation required) </a> </li>
+</ul>
 <li>Programming Assignment: Sudoku Verifier</li>
 <ul>
 
