StringCalculator task added

--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
 <li> <a href="./tasks/sudoku.pdf" target="blank">Sudoku Verifier task description</a></li>
 <li> Project repository on Github: <a href="https://github.com/SQATLab2016/SudokuVerifier" target="blank">SudokuVerifier </a> </li>
 </ul>
+
+<li>Additional Programming Assignment: String Calculator (If you have completed Sudoku task last week)</li>
+<ul>
+
+<li> <a href="./tasks/S2_ProgrammingAssignment_StringCalc.pdf" target="blank"> Instructions</a></li>
+<li> <a href="./tasks/StringCalculator_TaskDescription.pdf" target="blank">String Calculator task description</a></li>
+<li> Project repository on Github: <a href="https://github.com/SQATLab2016/StringCalculator" target="blank">StringCalculator </a> </li>
+</ul>
+
+
 </ul>
 
 <h4>
