--- a/index.html
+++ b/index.html
@@ -100,17 +100,23 @@
 <a id="session-4" class="anchor" href="#session-4" aria-hidden="true"><span class="octicon octicon-link"></span></a>Week 38:</h4>
 
 <ul>
-<li>TBA</li> 
+<li> In class exercise</li> 
 </ul>
 
-
 <h4>
+<a id="session-5" class="anchor" href="#session-5" aria-hidden="true"><span class="octicon octicon-link"></span></a>Week 39:</h4>
+<ul>
+<li> <a href="./sessions/session2.html" target="blank">Gentle Introduction to TDD</a> <br> Note that the lecture notes on TDD are available on Optima. </li>
+<li> Randori session: Tennis Game this time with TDD</li>
+<li> Programming Assignment: </li>
 <ul>
 <li> TBA </li>
 </ul>
 
+</ul>
+
 <h4>
-<a id="session-5" class="anchor" href="#session-5" aria-hidden="true"><span class="octicon octicon-link"></span></a>Week 40:</h4>
+<a id="session-6" class="anchor" href="#session-6" aria-hidden="true"><span class="octicon octicon-link"></span></a>Week 40:</h4>
 <ul>
 <li>TBA</li>
 </ul>
