--- a/index.html
+++ b/index.html
@@ -108,9 +108,10 @@
 <ul>
 <li> <a href="./sessions/session2.html" target="blank">Gentle Introduction to TDD</a> <br> Note that the lecture notes on TDD are available on Optima. </li>
 <li> Randori session: Tennis Game this time with TDD</li>
-<li> Programming Assignment: </li>
+<li> Programming Assignment: Roman Numerals</li>
 <ul>
-<li> TBA </li>
+<li> <a href="./tasks/RomanNumerals_TaskDescription.pdf" target="blank">Roman Numerals task description</a></li>
+<li> Project repository on Github: <a href="https://github.com/SQATLab2016/RomanNumerals" target="blank">Roman Numerals</a> </li>
 </ul>
 
 </ul>
