--- a/index.html
+++ b/index.html
@@ -119,7 +119,19 @@
 <h4>
 <a id="session-6" class="anchor" href="#session-6" aria-hidden="true"><span class="octicon octicon-link"></span></a>Week 40:</h4>
 <ul>
-<li>TBA</li>
+<li><a href="./sessions/session3.html" target="blank">Solid principles of Object-Oriented Programming</a> </li>
+
+<li><a href="./sessions/session4.html" target="blank">Test doubles - Mock objects</a> </li>
+<ul>
+<li><a href="https://github.com/M3SOulu/StockPortfolio" target="blank">Stock Portfolio Demo Project</a> </li>
+</ul>
+<li> Programming Assignment: Continue with Roman Numerals Task</li>
+
+<li> Programming Assignment: Simple Spreadsheet</li>
+<ul>
+<li> <a href="./tasks/SpreadSheet_TaskDescription.pdf" target="blank">Spreadsheet task description</a></li>
+<li> Project repository on Github: <a href="https://github.com/SQATLab2016/Spreadsheet" target="blank">Spreadsheet project repository</a> </li>
+</ul>
 </ul>
 
 <h4>
